# clean-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  logger.py  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 0fab28928396_.py
src/: rate_limiting.py
src/auth/controller/: auth_controller.py
src/auth/model/: token.py
src/auth/service/: auth_service.py
src/db/: core.py  db.py
src/entities/: job.py  user.py
src/errors/: custom.py
src/jobs/controller/: job_controller.py
src/jobs/model/: requests.py  responses.py
src/jobs/service/: job_service.py
src/models/: requests.py  token.py
src/security/: jwt.py  password.py
src/services/: auth_service.py  user_service.py
src/users/controller/: user_controller.py
src/users/model/: requests.py  responses.py
src/users/service/: user_service.py
tests/: conftest.py  test_auth_service.py  test_user_service.py
tests/e2e/: test_auth_endpoints.py  test_job_endpoints.py  test_user_endpoints.py
tests/unit/: test_auth_service.py  test_job_service.py  test_user_service.py
